--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dxfareed.github.io/Onchainvote/",
+  "homepage": "https://dxfareed.github.io/onchainvote/",
   "name": "vote-dapp",
   "version": "0.0.0",
   "type": "module",
